# ninkill

./: CMakeLists.txt  LICENSE  README.md
docs/: network.md  vfs.md
include/boot/: boot.hpp  bootcli.hpp
include/net/: ninkill.hpp  ninnet.hpp  page.hpp  website.hpp
include/programs/: api.hpp  vi.hpp
include/system/: console.hpp  pkg.hpp  usrAndPass.hpp
include/system/storage/: pkg.hpp  savefile.hpp
include/ui/: center.hpp  menu.hpp  spiner.hpp  userinput.hpp
include/util/: beep.h  longtexts.h  obfstr.hpp
include/util/term/: beep.h  getwh.hpp
include/util/text/: longtexts.h
include/vfs/: consolestart.hpp  vfs.hpp
src/: beep.h  boot.cpp  boot.hpp  consolestart.cpp  consolestart.hpp  longtexts.h  main.cpp  ninkill.cpp  ninkill.hpp  ninsys.cpp  ninsys.hpp  obfstr.hpp  page.hpp  savefile.cpp  savefile.hpp  userinput.cpp  userinput.hpp  usrAndPass.cpp  usrAndPass.hpp  website.cpp  website.hpp
src/boot/: boot.cpp  bootcli.cpp
src/core/: main.cpp
src/net/: ninkill.cpp  ninnet.cpp  website.cpp
src/programs/: neontui.cpp  vi.cpp
src/system/: console.cpp  ninsys.cpp  pkg.cpp  usrAndPass.cpp
src/system/core/: console.cpp  ninsys.cpp
src/system/storage/: pkg.cpp  savefile.cpp
src/ui/: menu.cpp  userinput.cpp
src/util/: getwh.cpp
src/vfs/: consolestart.cpp  vfs.cpp
